added tooltip warning about not saving images to the URL

--- a/stochastic_sierpinski.html
+++ b/stochastic_sierpinski.html
@@ -825,7 +825,7 @@ td.move_mode {
 
         <div class="imgbox buttonbox">
           <button id="button_create_png" class="tt ttright" data-title="Open the current canvas image as a PNG file in a new tab/window.">Create PNG</button>
-          <button id="button_save_url" class="tt ttright" data-title="Saves the current settings to the hash (#) on the current URL">Save as URL</button>
+          <button id="button_save_url" class="tt ttright" data-title="Saves the current settings to the hash (#) on the current URL. WARNING: Loaded images are NOT included! (URL length <= 2k)">Save as URL</button>
           <button id="button_save" class="tt ttright" data-title="Saves the current settings to copy-able JSON-formatted text.">Save as JSON</button>
           <button id="button_load" class="tt ttright" data-title="Paste the JSON-formatted text (from 'Save as JSON') to load previously saves settings.">Load from JSON</button>
         </div>
