--- a/stochastic_sierpinski.html
+++ b/stochastic_sierpinski.html
@@ -535,6 +535,21 @@ td.blank {
   display: none;
 }
 
+#imgmask_url {
+  width: 11em;
+}
+
+#imgmask_url::placeholder {
+  font-size: 8px;
+  font-style: italic;
+}
+
+#imgmask_url_button {
+  font-weight: bold;
+  padding-left: 1px;
+  padding-right: 1px;
+}
+
 #imgmask_threshold + label {
   position: relative;
   top: -4px;
@@ -971,10 +986,17 @@ td.move_mode {
               </td>
             </tr>
             <tr>
-              <th>Load Image As Bitmap</th>
+              <th>Load Image File</th>
               <td>
                 <input id="imgmask_file" type="file" accept="image/*">
                 <button id="imgmask_file_button">Load image file...</button>
+              </td>
+            </tr>
+            <tr>
+              <th>Load Image URL</th>
+              <td>
+                <input id="imgmask_url" type="text" placeholder="https://example.com/..." spellcheck="false">
+                <button id="imgmask_url_button">&#8658;</button>
               </td>
             </tr>
             <tr>
@@ -1714,6 +1736,9 @@ td.move_mode {
     };
 
     function DrawPoint(name) {
+      this.on_imgmask_url_keyup = bind(this.on_imgmask_url_keyup, this);
+      this.on_imgmask_url_button_click = bind(this.on_imgmask_url_button_click, this);
+      this.on_imgmask_url_change = bind(this.on_imgmask_url_change, this);
       this.on_imgmask_file_button_click = bind(this.on_imgmask_file_button_click, this);
       this.on_imgmask_file_change = bind(this.on_imgmask_file_change, this);
       this.on_imgmask_file_reader_load = bind(this.on_imgmask_file_reader_load, this);
@@ -1747,6 +1772,8 @@ td.move_mode {
       this.imgmask_img_hide_list = APP.context.querySelectorAll('.imgmask_img_hide');
       this.imgmask_file = APP.context.getElementById('imgmask_file');
       this.imgmask_file_button = APP.context.getElementById('imgmask_file_button');
+      this.imgmask_url = APP.context.getElementById('imgmask_url');
+      this.imgmask_url_button = APP.context.getElementById('imgmask_url_button');
       this.imgmask_img_caption = APP.context.getElementById('imgmask_img_caption');
       this.imgmask_img_size_width = APP.context.getElementById('imgmask_img_size_width');
       this.imgmask_img_size_height = APP.context.getElementById('imgmask_img_size_height');
@@ -1779,6 +1806,9 @@ td.move_mode {
       this.on_imgmask_enabled_change();
       this.imgmask_file.addEventListener('change', this.on_imgmask_file_change);
       this.imgmask_file_button.addEventListener('click', this.on_imgmask_file_button_click, false);
+      this.imgmask_url.addEventListener('input', this.on_imgmask_url_change);
+      this.imgmask_url.addEventListener('keyup', this.on_imgmask_url_keyup);
+      this.imgmask_url_button.addEventListener('click', this.on_imgmask_url_button_click, false);
       return this.btn_set_all_points.addEventListener('click', this.on_set_all_points);
     };
 
@@ -2178,6 +2208,41 @@ td.move_mode {
       }
     };
 
+    DrawPoint.prototype.on_imgmask_url_change = function() {
+      var str;
+      this.imgmask_url_button.disabled = true;
+      str = this.imgmask_url.value;
+      if ((str != null ? str.length : void 0) > 0) {
+        if (this.is_valid_imgmask_url(str)) {
+          return this.imgmask_url_button.disabled = false;
+        }
+      }
+    };
+
+    DrawPoint.prototype.on_imgmask_url_button_click = function() {
+      return this.imgmask_load_image_url(this.imgmask_url.value);
+    };
+
+    DrawPoint.prototype.is_valid_imgmask_url = function(str) {
+      var e;
+      try {
+        return new URL(str, window.location);
+      } catch (error) {
+        e = error;
+        if (e instanceof TypeError) {
+          return false;
+        } else {
+          throw e;
+        }
+      }
+    };
+
+    DrawPoint.prototype.on_imgmask_url_keyup = function(event) {
+      if (event.key === "Enter") {
+        return this.on_imgmask_url_button_click();
+      }
+    };
+
     DrawPoint.prototype.enable_imgmask = function() {
       this.option.imgmask_scale_width.enable();
       this.option.imgmask_scale_height.enable();
@@ -2186,7 +2251,9 @@ td.move_mode {
       this.option.imgmask_threshold.enable();
       this.option.imgmask_oversample.enable();
       this.imgmask_file.disabled = false;
-      return this.imgmask_file_button.disabled = false;
+      this.imgmask_file_button.disabled = false;
+      this.imgmask_url.disabled = false;
+      return this.on_imgmask_url_change();
     };
 
     DrawPoint.prototype.disable_imgmask = function() {
@@ -2197,7 +2264,9 @@ td.move_mode {
       this.option.imgmask_threshold.disable();
       this.option.imgmask_oversample.disable();
       this.imgmask_file.disabled = true;
-      return this.imgmask_file_button.disabled = true;
+      this.imgmask_file_button.disabled = true;
+      this.imgmask_url.disabled = true;
+      return this.imgmask_url_button.disabled = true;
     };
 
     DrawPoint.prototype.target_chosen_twice = function() {
@@ -4320,18 +4389,6 @@ td.move_mode {
         case "Escape":
         case "Esc":
           return this.stop();
-        case "r":
-        case "R":
-          return this.resumable_reset();
-        case "p":
-        case "P":
-          return this.on_create_png();
-        case "s":
-        case "S":
-          return this.on_save();
-        case "l":
-        case "L":
-          return this.on_load();
       }
     };
 
